[package]
name = "resolvo-deb"
version = "0.4.0"
edition = "2021"
description = "Resolver for .deb packages"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resolvo = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
eyre = "0.6"
once_cell ="1.19"
nom = "7.1"
serde = { version = "1.0", features = ["derive"] }
version-compare = "0.1.1"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
oma-debcontrol = "0.3.1"
thiserror = "1.0.57"
oma-apt = { version = "0.1.2", optional = true }

[features]
default = ["local"]
local = ["dep:oma-apt"]
